fix overflow in admin dashboard

--- a/src/app/pages/admin-dashboard-page/admin-dashboard-page.component.css
+++ b/src/app/pages/admin-dashboard-page/admin-dashboard-page.component.css
@@ -11,6 +11,7 @@ main {
 }
 .content {
     max-width: 100dvw;
+    min-height: 100dvh;
     overflow-x: scroll;
 }
 @media (max-width: 768px) { 
